--- a/internal/chat/templates/index.html
+++ b/internal/chat/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Chattix</title>
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
 <div class='chat'>
